--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "dotenv": "^10.0.0",
     "eslint-config-airbnb": "^18.2.1",
     "express": "^4.12.3",
+    "fs": "^0.0.1-security",
     "geocoder": "^0.2.3",
     "mongoose": "^5.13.5",
     "prop-types": "^15.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-transition-group": "^4.4.2",
+    "save-dev": "^0.0.1-security",
     "webpack": "^5.32.0"
   },
   "devDependencies": {
