before pull from backend

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "NODE_ENV=production node server/server.js",
     "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development nodemon server/server.js & NODE_ENV=development webpack serve --open"
+    "dev": "NODE_ENV=development nodemon server/server.js & NODE_ENV=development webpack serve --open",
+    "test": "jest"
   },
   "nodemonConfig": {
     "ignore": [
@@ -23,10 +24,13 @@
     "babelify": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "enzyme": "^3.11.0",
     "eslint-config-airbnb": "^18.2.1",
     "express": "^4.12.3",
     "geocoder": "^0.2.3",
+    "jest": "^27.0.6",
     "mongoose": "^5.13.5",
     "prop-types": "^15.6.1",
     "react": "^17.0.2",
